# Chalkipie

./: .env  .env.local  DEPLOYMENT_CHECKLIST.md  README.md  package-lock.json  pyproject.toml  render.yaml
backend/: debug_door_extraction.ipynb  draw_polygon.py  extract_chalk.py  extract_experiment.ipynb  full_pipeline.py  segment.py  test_mask.py
backend/segmentation_outputs/: segmentation_results.json
chalk-to-midi/: README.md  main.py  requirements.txt
doorapp/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  DOOR_SYSTEM_IMPLEMENTATION.md  EXTRACT_FLOW_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  next.config.ts  package-lock.json  package.json
doorapp/app/: globals.css  layout.tsx  page.tsx
doorapp/app/api/chalk/: route.js
doorapp/app/api/chalk/process/: route.js
doorapp/app/api/render/[action]/: route.ts
doorapp/app/api/upload/[action]/: route.ts
doorapp/app/upload/: page.tsx
doorapp/components/: AcademicTermSelector.tsx  DoorActionButtons.tsx  DoorFocusView.tsx  DoorGrid.tsx  DoorModal.tsx  DoorProximityPrompt.tsx  DoorTile.tsx  DoorZoomOverlay.tsx  FancyPantsGuy.tsx  FloorPickerModal.tsx  FloorRow.tsx  ImageUploader.tsx  Lift.tsx  LiftShaft.tsx
doorapp/contexts/: DoorStateContext.tsx
doorapp/lib/: api.ts  mockData.ts  uploadHandler.ts
doorapp/types/: door.ts
